crates/ditto-checker/tests/golden/type-errors/unknown_variable_typo.ditto
module Test exports (..)

five = 5

suggest = fide
